Fix links not wrapping

--- a/frontend/html/static/css/style.css
+++ b/frontend/html/static/css/style.css
@@ -71,6 +71,10 @@ button:hover, a.button:hover {
     padding: 30px;
 }
 
+.result a, .facultyDetails a {
+     word-wrap: break-word;
+}
+
 .searchResult {
     padding-top: 10px;
 }
